--- a/.github/workflows/typescript.yml
+++ b/.github/workflows/typescript.yml
@@ -14,9 +14,11 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
 
+      - name: Install bun
+        uses: oven-sh/setup-bun@v2
+
       - name: Lint
-        working-directory: scamplers-ui
-        run: bun run --bun check
+        run: bun run --bun --cwd=scamplers-ui check
 
   format:
     runs-on: ubuntu-latest
@@ -25,7 +27,7 @@ jobs:
         uses: denoland/setup-deno@v2
 
       - name: Format
-        run: deno fmt --check
+        run: deno fmt --check --unstable-component scamplers-ui
 
   test:
     runs-on: ubuntu-latest
@@ -37,8 +39,7 @@ jobs:
         uses: oven-sh/setup-bun@v2
 
       - name: Install dependencies
-        run: bun install
+        run: bun install --cwd=scamplers-ui
 
       - name: Test
-        working-directory: scamplers-ui
-        run: bun test
+        run: bun test --cwd=scamplers-ui
