--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,6 +8,31 @@ on:
       - main
 
 jobs:
+  check-schema:
+    runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_HOST_AUTH_METHOD: trust
+          ports: 5432
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+
+      - name: Cache cargo files
+        uses: Swatinem/rust-cache@v2
+        with:
+          cache-all-crates: true
+          cache-workspace-crates: true
+
+      - name: Install diesel-cli
+        run: cargo install diesel_cli --no-default-features --features postgres
+
+      - name: Check schema
+        working-directory: scamplers-schema
+        run: diesel setup --locked-schema
+
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -20,11 +45,8 @@ jobs:
           cache-all-crates: true
           cache-workspace-crates: true
 
-      - name: Install diesel
-        run: cargo install diesel_cli --no-default-features --features postgres
-
       - name: Lint
-        run: cargo clippy --workspace
+        run: RUN_DIESEL_CLI=false cargo clippy --workspace
 
   format:
     runs-on: ubuntu-latest
@@ -39,10 +61,10 @@ jobs:
           cache-workspace-crates: true
 
       - name: Install nightly toolchain
-        run: rustup component add --toolchain nightly-2025-11-05 rustfmt
+        run: rustup component add --toolchain nightly-2025-11-10 rustfmt # This is updated weekly-ish
 
       - name: Format
-        run: cargo +nightly-2025-11-05 fmt -- --check
+        run: cargo +nightly-2025-11-10 fmt -- --check
 
   test:
     runs-on: ubuntu-latest
@@ -59,8 +81,8 @@ jobs:
           cache-all-crates: true
           cache-workspace-crates: true
 
-      - name: Install diesel
-        run: cargo install diesel_cli --no-default-features --features postgres
+      - name: Build
+        run: RUN_DIESEL_CLI=false cargo build --tests
 
       - name: Test
         run: cargo test --workspace --all-features
