--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ target
 !.env.compose.sample
 
 # Initial data also useful for development
-initial*data*
+initial_data
 !initial_data.sample.json
 
 # Generated TypesScript code
