--- a/.github/workflows/typescript.yml
+++ b/.github/workflows/typescript.yml
@@ -8,28 +8,7 @@ on:
       - main
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v4
-
-      - name: Install bun
-        uses: oven-sh/setup-bun@v2
-
-      - name: Lint
-        run: bun run --bun --cwd=scamplers-ui check
-
-  format:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Install Deno
-        uses: denoland/setup-deno@v2
-
-      - name: Format
-        run: deno fmt --check --unstable-component scamplers-ui
-
-  test:
+  lint-and-test:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
@@ -41,5 +20,20 @@ jobs:
       - name: Install dependencies
         run: bun install --cwd=scamplers-ui
 
+      - name: Lint
+        run: bun run --bun --cwd=scamplers-ui check
+
       - name: Test
         run: bun test --cwd=scamplers-ui
+
+  format:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+
+      - name: Install Deno
+        uses: denoland/setup-deno@v2
+
+      - name: Format
+        run: deno fmt --check --unstable-component scamplers-ui
