--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,7 +15,8 @@ jobs:
         image: postgres
         env:
           POSTGRES_HOST_AUTH_METHOD: trust
-          ports: 5432
+        ports:
+          - 5432
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
