--- a/.github/workflows/sql.yml
+++ b/.github/workflows/sql.yml
@@ -1,10 +1,8 @@
 name: Check SQL Code
 on:
-  pull_request:
+  push:
     paths:
       - "**/*.sql"
-    branches:
-      - main
 jobs:
   lint_sql:
     runs-on: ubuntu-latest
