--- a/.github/workflows/types.yml
+++ b/.github/workflows/types.yml
@@ -1,10 +1,8 @@
 name: Check Types
 on:
-  pull_request:
+  push:
     paths:
       - "**/*.rs"
-    branches:
-      - main
 
 jobs:
   check_json-schema:
