--- a/.github/workflows/typescript.yml
+++ b/.github/workflows/typescript.yml
@@ -1,10 +1,8 @@
 name: Check TypeScript Code
 on:
-  pull_request:
+  push:
     paths:
       - scamplers-ui/**
-    branches:
-      - main
 
 jobs:
   lint-and-test:
